force-app/main/default/objects/Flow_Run__c/Flow_Run__c.object-meta.xml
<CustomObject>
    <label>Flow Run</label>
    <nameField>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Flow Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>