force-app/main/default/objects/Flow_Run__c/fields/CpuTimeMs__c.field-meta.xml
<CustomField>
    <fullName>CpuTimeMs__c</fullName>
    <label>CpuTimeMs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>