force-app/main/default/objects/Flow_Run__c/fields/DurationMs__c.field-meta.xml
<CustomField>
    <fullName>DurationMs__c</fullName>
    <label>DurationMs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>