force-app/main/default/objects/Flow_Run__c/fields/EntryPoint__c.field-meta.xml
<CustomField>
    <fullName>EntryPoint__c</fullName>
    <label>EntryPoint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen</fullName>
            </value>
            <value>
                <fullName>RecordTriggered</fullName>
            </value>
            <value>
                <fullName>Autolaunched</fullName>
            </value>
            <value>
                <fullName>Subflow</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>