force-app/main/default/objects/Flow_Run__c/fields/FlowApiName__c.field-meta.xml
<CustomField>
    <fullName>FlowApiName__c</fullName>
    <label>FlowApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>