force-app/main/default/objects/Flow_Run__c/fields/FlowLabel__c.field-meta.xml
<CustomField>
    <fullName>FlowLabel__c</fullName>
    <label>FlowLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>