force-app/main/default/objects/Flow_Run__c/fields/FlowVersion__c.field-meta.xml
<CustomField>
    <fullName>FlowVersion__c</fullName>
    <label>FlowVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>