force-app/main/default/objects/Flow_Run__c/fields/InterviewGuid__c.field-meta.xml
<CustomField>
    <fullName>InterviewGuid__c</fullName>
    <label>InterviewGuid</label>
    <length>80</length>
    <type>Text</type>
</CustomField>