force-app/main/default/objects/Flow_Run__c/fields/RunAsUserId__c.field-meta.xml
<CustomField>
    <fullName>RunAsUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RunAsUserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Flow_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>