force-app/main/default/objects/Flow_Run__c/fields/SoqlQueries__c.field-meta.xml
<CustomField>
    <fullName>SoqlQueries__c</fullName>
    <label>SoqlQueries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>